Versão inicial do registro de usuários

--- a/GerenciadorCondominios/Views/Usuarios/Registro.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/Registro.cshtml
@@ -1,7 +1,7 @@
 ﻿@model GerenciadorCondominios.ViewModels.RegistroViewModel
 @{
     Layout = null;
-    ViewData["title"] = "Cadastro de moradores";
+    ViewData["Title"] = "Cadastro de moradores";
 }
 
 <!DOCTYPE html>
@@ -60,7 +60,7 @@
                         <div class="file-field input-field col s12">
                             <div class="btn-small">
                                 <span>Selecione sua foto</span>
-                                <input asp-for="Foto" type="file" class="validate" id="Foto" />
+                                <input asp-for="Foto" type="file" class="validate" id="foto" />
                             </div>
 
                             <div class="file-path-wrapper">
