--- a/GerenciadorCondominios/Views/Usuarios/Index.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/Index.cshtml
@@ -48,55 +48,55 @@
                 <tbody>
                     @foreach (var item in Model)
                     {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.UserName)
-                        </td>
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Cpf)
-                        </td>
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item.PhoneNumber)
-                        </td>
-
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Status)
-                        </td>
-
-                        @if (item.Status == StatusConta.Analisando)
-                        {
+                        <tr>
                             <td>
-                                <span class="new badge purple darken-3" data-badge-caption="" id="@item.Id">@Html.DisplayFor(modelItem => item.Status)</span>
-                            </td>
-                            <td class="@item.Id">
-                                <a class="btn floating blue darken-4 btnAprovar" onclick="AprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_up</i></a>
-                                <a class="btn floating red darken-4 btnReprovar" onclick="ReprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_down</i></a>
-                            </td>
-                        }
-                        else if (item.Status == StatusConta.Aprovado)
-                        {
-                            <td>
-                                <span class="new badge green darken-3" data-badge-caption="">@Html.DisplayFor(modelItem => item.Status)</span>
+                                @Html.DisplayFor(modelItem => item.UserName)
                             </td>
 
                             <td>
-                                <a class="btn floating blue darken-4" asp-controller="Usuarios" asp-action="GerenciarUsuarios" asp-route-id="@item.Id" asp-route-name="@item.UserName"><i class="material-icons">group</i></a>
-                            </td>
-                        }
-                        else
-                        {
-                            <td>
-                                <span class="new badge orange darken-3" data-badge-caption="">@Html.DisplayFor(modelItem => item.Status)</span>
+                                @Html.DisplayFor(modelItem => item.Cpf)
                             </td>
 
-                        }
-                    </tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Email)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.PhoneNumber)
+                            </td>
+
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Status)
+                            </td>
+
+                            @if (item.Status == StatusConta.Analisando)
+                            {
+                                <td>
+                                    <span class="new badge purple darken-3" data-badge-caption="" id="@item.Id">@Html.DisplayFor(modelItem => item.Status)</span>
+                                </td>
+                                <td class="@item.Id">
+                                    <a class="btn floating blue darken-4 btnAprovar" onclick="AprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_up</i></a>
+                                    <a class="btn floating red darken-4 btnReprovar" onclick="ReprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_down</i></a>
+                                </td>
+                            }
+                            else if (item.Status == StatusConta.Aprovado)
+                            {
+                                <td>
+                                    <span class="new badge green darken-3" data-badge-caption="">@Html.DisplayFor(modelItem => item.Status)</span>
+                                </td>
+
+                                <td>
+                                    <a class="btn floating blue darken-4" asp-controller="Usuarios" asp-action="GerenciarUsuarios" asp-route-id="@item.Id" asp-route-name="@item.UserName"><i class="material-icons">group</i></a>
+                                </td>
+                            }
+                            else
+                            {
+                                <td>
+                                    <span class="new badge orange darken-3" data-badge-caption="">@Html.DisplayFor(modelItem => item.Status)</span>
+                                </td>
+
+                            }
+                        </tr>
                     }
                 </tbody>
             </table>
@@ -107,3 +107,10 @@
     </div>
 </div>
 
+<environment include="Development">
+    <script src="~/js/OperacoesUsuario.js"></script>
+</environment>
+
+<environment exclude="Development">
+    <script src="~/js/OperacoesUsuario.min.js"></script>
+</environment>
