Criado o gerenciamento das funções dos usuários

--- a/GerenciadorCondominios/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominios/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
 </head>
 <body>
     <header>
-        <nav class="gray darken-3">
+        <nav class="grey darken-3">
             <div class="nav-wrapper navbar-fixed">
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
