--- a/GerenciadorCondominios/Views/Usuarios/Index.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/Index.cshtml
@@ -86,7 +86,7 @@
                                 </td>
 
                                 <td>
-                                    <a class="btn floating blue darken-4" asp-controller="Usuarios" asp-action="GerenciarUsuarios" asp-route-id="@item.Id" asp-route-name="@item.UserName"><i class="material-icons">group</i></a>
+                                    <a class="btn floating blue darken-4" asp-controller="Usuarios" asp-action="GerenciarUsuario" asp-route-usuarioId="@item.Id" asp-route-nome="@item.UserName"><i class="material-icons">group</i></a>
                                 </td>
                             }
                             else
