Criadas as estruturas para gerenciar as informações do usuário

--- a/GerenciadorCondominios/Views/Usuarios/GerenciarUsuario.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/GerenciarUsuario.cshtml
@@ -1,6 +1,8 @@
 ﻿@model List<GerenciadorCondominios.ViewModels.FuncaoUsuarioViewModel>
 @{
-    ViewData["Title"] = "Atualizar funções do usuário " + @ViewBag.Nome;
+    var NomeUsuario = ViewBag.Nome;
+
+    ViewData["Title"] = "Atualizar funções do usuário " + @NomeUsuario;
 }
 
 <form asp-action="GerenciarUsuario" method="post">
@@ -9,7 +11,7 @@
     <div class="collection with-header">
 
         <div class="collection-header grey darken-1">
-            <h6 class="white-text">Atualizar funções do usuário @ViewBag.Nome</h6>
+            <h6 class="white-text">Atualizar funções do usuário @NomeUsuario</h6>
         </div>
 
         <div class="collection-item">
