Criadas as estruturas de manipulação de veículos

--- a/GerenciadorCondominios/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominios/Views/Shared/_Layout.cshtml
@@ -54,6 +54,7 @@
 
         <script src="https://code.jquery.com/jquery-3.5.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.js"></script>
+        <script src="~/js/InicializarTooltips.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
         @RenderSection("Scripts", required: false)
     </environment>
@@ -62,6 +63,7 @@
 
         <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+        <script src="~/js/InicializarTooltips.min.js"></script>
         <script src="~/js/site.min.js" asp-append-version="true"></script>
         @RenderSection("Scripts", required: false)
     </environment>
