--- a/GerenciadorCondominios/Views/Usuarios/MinhasInformacoes.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/MinhasInformacoes.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "Minhas Informacoes";
 }
 
-@*<partial name="_Confirmacoes" />*@
+<partial name="_Confirmacoes" />
 
 <div class="card horizontal">
     <div class="card-image">
@@ -42,9 +42,33 @@
 </div>
 
 <div>
-    @*@await Component.InvokeAsync("Veiculos", Model.Id)*@
+    @await Component.InvokeAsync("Veiculos", Model.Id)
 </div>
 
 <div>
-    @*<partial name="_Excluir" />*@
+    <partial name="_ModalExcluir" />
 </div>
+
+@section Scripts{ 
+    <script>
+        function ConfirmarExclusao(id, nome) {
+            $('.modal').modal({
+                dismissible: true
+            });
+
+            $('.modal').modal('open');
+            $('.nome').text(nome);
+
+            $('.btnExcluir').on('click', function () {
+                $.ajax({
+                    method: "POST",
+                    url: "/Veiculos/Delete",
+                    data: { id: id },
+                    success: function (data) {
+                        location.reload(true);
+                    }
+                });
+            });
+        }
+    </script>
+}
