Crud serviços (create, edit e delete)

--- a/GerenciadorCondominios/Views/Usuarios/Login.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/Login.cshtml
@@ -60,7 +60,7 @@
 
                 <div class="botoes">
                     <button type="submit" class="waves-effect waves-light btn-small green darken-4">Login</button> &emsp;
-                    <p asp-controller="Usuarios" asp-action="Registro">Não possuo uma conta</p>
+                    <a asp-controller="Usuarios" asp-action="Registro">Não possuo uma conta</a>
                 </div>
             </form>
         </div>
