--- a/GerenciadorCondominios/Views/Servicos/Create.cshtml
+++ b/GerenciadorCondominios/Views/Servicos/Create.cshtml
@@ -1,45 +1,45 @@
 ﻿@model GerenciadorCondominiosBLL.Models.Servico
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Novo serviço";
 }
 
-<h1>Create</h1>
-
-<h4>Servico</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="formulario">
+    <div class="collection with-header">
         <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+
+            <input type="hidden" asp-for="UsuarioId" />
+
+            <div class="collection-header green darken-3">
+                <h6 class="white-text">Novo serviço</h6>
             </div>
-            <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
-                <span asp-validation-for="Valor" class="text-danger"></span>
+
+            <div class="collection-item">
+                <div asp-validation-summary="ModelOnly" class="red-text text-darken-4"></div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label asp-for="Nome"></label>
+                        <input asp-for="Nome" class="validate" id="nome" />
+                        <span asp-validation-for="Nome" class="red-text text-darken-4"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label asp-for="Valor"></label>
+                        <input asp-for="Valor" class="validate" id="valor" />
+                        <span asp-validation-for="Valor" class="red-text text-darken-4"></span>
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
-                <select asp-for="UsuarioId" class ="form-control" asp-items="ViewBag.UsuarioId"></select>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="collection-item">
+                <button type="submit" class="btn-small green darken-3">Salvar</button> &emsp;
+                <a asp-action="Index" asp-controller="Servicos">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
