--- a/GerenciadorCondominios/Views/Servicos/Edit.cshtml
+++ b/GerenciadorCondominios/Views/Servicos/Edit.cshtml
@@ -1,47 +1,48 @@
 ﻿@model GerenciadorCondominiosBLL.Models.Servico
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Atualizar serviço";
 }
 
-<h1>Edit</h1>
-
-<h4>Servico</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="formulario">
+    <div class="collection with-header">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <input type="hidden" asp-for="UsuarioId" />
             <input type="hidden" asp-for="SevicoId" />
-            <div class="form-group">
-                <label asp-for="Nome" class="control-label"></label>
-                <input asp-for="Nome" class="form-control" />
-                <span asp-validation-for="Nome" class="text-danger"></span>
+
+            <div class="collection-header blue darken-3">
+                <h6 class="white-text">Atualizar serviço</h6>
             </div>
-            <div class="form-group">
-                <label asp-for="Valor" class="control-label"></label>
-                <input asp-for="Valor" class="form-control" />
-                <span asp-validation-for="Valor" class="text-danger"></span>
+
+            <div class="collection-item">
+                <div asp-validation-summary="ModelOnly" class="red-text text-darken-4"></div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label asp-for="Nome"></label>
+                        <input asp-for="Nome" class="validate" id="nome" />
+                        <span asp-validation-for="Nome" class="red-text text-darken-4"></span>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="input-field col s12">
+                        <label asp-for="Valor"></label>
+                        <input asp-for="Valor" class="validate" id="valor" />
+                        <span asp-validation-for="Valor" class="red-text text-darken-4"></span>
+                    </div>
+                </div>
+
             </div>
-            <div class="form-group">
-                <label asp-for="Status" class="control-label"></label>
-                <select asp-for="Status" class="form-control"></select>
-                <span asp-validation-for="Status" class="text-danger"></span>
+
+            <div class="collection-item">
+                <button type="submit" class="btn-small blue darken-3">Atualizar</button> &emsp;
+                <a asp-action="Index" asp-controller="Servicos">Voltar</a>
             </div>
-            <div class="form-group">
-                <label asp-for="UsuarioId" class="control-label"></label>
-                <select asp-for="UsuarioId" class="form-control" asp-items="ViewBag.UsuarioId"></select>
-                <span asp-validation-for="UsuarioId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
+
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
