--- a/GerenciadorCondominios/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominios/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
                     <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index">Serviços</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Usuarios" asp-action="MinhasInformacoes">Minhas informações</a></li>
                     <li class="nav-item"><partial name="_Logout" /></li>
                 </ul>
