--- a/GerenciadorCondominios/Views/Servicos/Index.cshtml
+++ b/GerenciadorCondominios/Views/Servicos/Index.cshtml
@@ -82,8 +82,8 @@
                             }
                             else
                             {
-                                <a asp-action="AprovarServico" app-route-id="@item.SevicoId" class="btn-floating btn-small blue darken-4 toolip" data-position="left" data-tooltip="Aprovar serviço"><i class="material-icons">thumb_up</i></a>
-                                <a asp-action="ReprovarServico" app-route-id="@item.SevicoId" class="btn-floating btn-small red darken-4 toolip" data-position="left" data-tooltip="Reprovar serviço"><i class="material-icons">thumb_down</i></a>
+                                <a asp-action="AprovarServico" asp-route-id="@item.SevicoId" class="btn-floating btn-small blue darken-4 tooltip" data-position="left" data-tooltip="Aprovar serviço"><i class="material-icons">thumb_up</i></a>
+                                <a asp-action="RecusarServico" asp-route-id="@item.SevicoId" class="btn-floating btn-small red darken-4 tooltip" data-position="left" data-tooltip="Recusar serviço"><i class="material-icons">thumb_down</i></a>
                             }
                         </td>
 
