--- a/GerenciadorCondominios/Views/Shared/_Layout.cshtml
+++ b/GerenciadorCondominios/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
             <div class="nav-wrapper navbar-fixed">
 
                 <ul id="nav-mobile" class="right hide-on-med-and-down">
-                    <li class="nav-item"><a class="nav-link" asp-controller="Alugueis" asp-action="Index">Aluguéis</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Pagamentos" asp-action="Index">Pagamentos</a></li>
+                    <li class="nav-item"><a class="nav-link" asp-controller="Alugueis" asp-action="Index">Alugueis</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Funcoes" asp-action="Index">Funções</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Apartamentos" asp-action="Index">Apartamentos</a></li>
                     <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
