--- a/GerenciadorCondominios/Views/Shared/_SideNav.cshtml
+++ b/GerenciadorCondominios/Views/Shared/_SideNav.cshtml
@@ -32,13 +32,14 @@
             <li class="nav-item"><a class="nav-link" asp-controller="Apartamentos" asp-action="Index"><i class="material-icons">store</i>Apartamentos</a> </li>
             <li class="nav-item"><a class="nav-link" asp-controller="Alugueis" asp-action="Index"><i class="material-icons">attach_money</i> Alugueis</a></li>
         }
-        else if (await UsuarioRepositorio.VerificarSeUsuarioEstaEmFuncao(usuario, "Administrador"))
+
+        @if (await UsuarioRepositorio.VerificarSeUsuarioEstaEmFuncao(usuario, "Administrador"))
         {
             <li class="nav-item"><a class="nav-link" asp-controller="Funcoes" asp-action="Index"><i class="material-icons">group</i>Funções</a></li>
         }
 
-        <li class="nav-item"><a class="nav-link" asp-controller="Pagamentos" asp-action="Index">Pagamentos</a></li>
-        <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index">Eventos</a></li>
-        <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index">Serviços</a></li>
+        <li class="nav-item"><a class="nav-link" asp-controller="Pagamentos" asp-action="Index"><i class="material-icons">monetization_on</i>Pagamentos</a></li>
+        <li class="nav-item"><a class="nav-link" asp-controller="Eventos" asp-action="Index"><i class="material-icons">list</i>Eventos</a></li>
+        <li class="nav-item"><a class="nav-link" asp-controller="Servicos" asp-action="Index"><i class="material-icons">settings</i>Serviços</a></li>
 
     </ul>
