--- a/GerenciadorCondominios/Views/Usuarios/Index.cshtml
+++ b/GerenciadorCondominios/Views/Usuarios/Index.cshtml
@@ -7,6 +7,8 @@
 
 <div class="tabelas">
 
+    <partial name="_Confirmacoes" />
+
     <div class="collection with-header">
         <div class="collection-header grey darken-1">
             <div class="row">
@@ -75,8 +77,8 @@
                                     <span class="new badge purple darken-3" data-badge-caption="" id="@item.Id">@Html.DisplayFor(modelItem => item.Status)</span>
                                 </td>
                                 <td class="@item.Id">
-                                    <a class="btn floating blue darken-4 btnAprovar" onclick="AprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_up</i></a>
-                                    <a class="btn floating red darken-4 btnReprovar" onclick="ReprovarUsuario('@item.Id', '@item.UserName')"><i class="material-icons">thumb_down</i></a>
+                                    <a class="btn floating blue darken-4 btnAprovar tooltip" onclick="AprovarUsuario('@item.Id', '@item.UserName')" data-position="right" data-tooltip="Aprovar usuário"><i class="material-icons">thumb_up</i></a>
+                                    <a class="btn floating red darken-4 btnReprovar tooltip" onclick="ReprovarUsuario('@item.Id', '@item.UserName')" data-position="right" data-tooltip="Reprovar usuário"><i class="material-icons">thumb_down</i></a>
                                 </td>
                             }
                             else if (item.Status == StatusConta.Aprovado)
@@ -86,7 +88,7 @@
                                 </td>
 
                                 <td>
-                                    <a class="btn floating blue darken-4" asp-controller="Usuarios" asp-action="GerenciarUsuario" asp-route-usuarioId="@item.Id" asp-route-nome="@item.UserName"><i class="material-icons">group</i></a>
+                                    <a class="btn floating blue darken-4 tooltip" asp-controller="Usuarios" asp-action="GerenciarUsuario" asp-route-usuarioId="@item.Id" asp-route-nome="@item.UserName" data-position="right" data-tooltip="Gerenciar usuário"><i class="material-icons">group</i></a>
                                 </td>
                             }
                             else
