--- a/GerenciadorCondominios/Views/Dashboard/Index.cshtml
+++ b/GerenciadorCondominios/Views/Dashboard/Index.cshtml
@@ -25,7 +25,7 @@
     </div>
 
     <div class="card-body">
-         @*<partial name="_GraficoValoresGanhosDespesas" />*@
+        <partial name="_GraficoValoresGanhosDespesas" />
     </div>
 </div>
 
@@ -61,8 +61,9 @@
 
 
 @section Scripts {
-    <script src="~/js/IniciarSelect.js"></script>
-     @*<script src="~/js/MetdosGraficos.min.js"></script>
+    <script src="~/js/IniciarSelect.js"></script>    
+    <script src="~/js/Graficos.js"></script>
+    <script src="~/js/MetodosComuns.js"></script>
 
         <script>CarregarDadosGanhosPorAno();
             MontarGraficoDespesasGanhosTotais();
@@ -86,7 +87,7 @@
 
             $(".btnDespesas").on('click', function () {
                 CarregarDadosDespesasPorAno();
-            })</script>*@
+            })</script>
 
 
 } 
