--- a/GerenciadorCondominios/Views/Dashboard/Index.cshtml
+++ b/GerenciadorCondominios/Views/Dashboard/Index.cshtml
@@ -37,7 +37,7 @@
             </div>
 
             <div class="collection-item">
-                 @*<partial name="_GraficoDespesasGanhosTotais" />*@
+                <partial name="_GraficoDespesasGanhosTotais" />
             </div>
         </div>
     </div>
